--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <a href="home.html"><img src="Assets/images/nav_logo.png" alt="Logo" width="240" height="62"></a>
+    <a href="index.html"><img src="Assets/images/nav_logo.png" alt="Logo" width="240" height="62"></a>
     <nav>
       <ul>
         <li><a href="about.html">About Us</a></li>
