--- a/adhd-check.html
+++ b/adhd-check.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <header>
-    <a href="home.html">
+    <a href="index.html">
       <img src="/Assets/images/nav_logo.png" alt="Logo" />
     </a>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
