--- a/donation.html
+++ b/donation.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <a href="home.html"><img src="Assets/images/nav_logo.png" alt="Logo" width="240" height="62"></a>
+    <a href="index.html"><img src="Assets/images/nav_logo.png" alt="Logo" width="240" height="62"></a>
     <nav>
       <ul>
         <li><a href="about.html">About Us</a></li>
