--- a/merch.html
+++ b/merch.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Navigation -->
   <header class="navbar">
-    <a href="home.html"><img src="assets/images/back_trans_black.png" alt="Neurovinc Logo" height="60" /></a>
+    <a href="index.html"><img src="assets/images/back_trans_black.png" alt="Neurovinc Logo" height="60" /></a>
     <nav>
       <ul class="menu">
         <li><a href="about.html">About Us</a></li>
