--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <a href="/home.html">
+    <a href="/index.html">
       <img src="/Assets/images/nav_logo.png" alt="Logo" class="logo">
     </a>
     <nav>
