--- a/donation.html
+++ b/donation.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Donate – Neurovinc</title>
-  <link rel="stylesheet" href="/css/donation.css" />
+  <link rel="stylesheet" href="css/donation.css" />
   <link rel="icon" type="image/png" href="Assets/images/Vertical Image.png" />
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap" rel="stylesheet" />
 </head>
@@ -92,7 +92,7 @@
     </p>
     <p>
       We commit to transparency in fund usage and protecting your privacy.
-      For more details, visit our <a href="/privacy.html">Privacy Policy</a>.
+      For more details, visit our <a href="privacy.html">Privacy Policy</a>.
     </p>
   </section>
 
