--- a/signup.html
+++ b/signup.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign Up – Neurovinc</title>
-  <link rel="stylesheet" href="/css/signup.css"/>
+  <link rel="stylesheet" href="css/signup.css"/>
 </head>
 <body>
   <header>
     <a href="/index.html">
-      <img src="/Assets/images/nav_logo.png" alt="Logo" class="logo">
+      <img src="Assets/images/nav_logo.png" alt="Logo" class="logo">
     </a>
     <nav>
       <ul>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/index.html#learn">Learn</a></li>
-        <li><a href="/index.html#friend">Friend</a></li>
-        <li><a href="/index.html#merch">Our Merch</a></li>
-        <li><a href="/login.html">Login</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="index.html#learn">Learn</a></li>
+        <li><a href="index.html#friend">Friend</a></li>
+        <li><a href="index.html#merch">Our Merch</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -37,7 +37,7 @@
 
         <button type="submit">Create Account</button>
 
-        <p class="login-link">Already have an account? <a href="/login.html">Login here</a></p>
+        <p class="login-link">Already have an account? <a href="login.html">Login here</a></p>
         
       </form>
     </div>
