--- a/login.html
+++ b/login.html
@@ -38,13 +38,13 @@
         <button type="submit">Login</button>
 
         <p class="signup-link">
-            Don't have an account? <a href="/signup.html">Sign up here</a>
+            Don't have an account? <a href="signup.html">Sign up here</a>
         </p>
       </form>
     </div>
 
     <div class="login-image">
-      <img src="/Assets/images/UI:UX Design.png" alt="Kids learning illustration">
+      <img src="Assets/images/UI:UX Design.png" alt="Kids learning illustration">
     </div>
   </main>
 
