--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <title>Login – Neurovinc</title>
   <link rel="stylesheet" href="css/login.css" />
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="Assets/images/Vertical Image.png"/>
 </head>
 <body>
 
