--- a/about.html
+++ b/about.html
@@ -50,12 +50,14 @@
         <img src="Assets/images/aaron_portrait.png" alt="Aaron - Co-Founder" />
         <h3>Aaron</h3>
         <p>Co-Founder</p>
+        <p>Lead Programmer</p>
         <!-- Optional: Add a short personal quote or role summary -->
       </div>
       <div class="founder-card">
         <img src="Assets/images/rohan_portrait.png" alt="Rohan - Co-Founder" />
         <h3>Rohan</h3>
         <p>Co-Founder</p>
+        <p>Head of Research</p>
       </div>
     </section>
   </main>
