--- a/merch.html
+++ b/merch.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Our Merch – Neurovinc</title>
   <link rel="stylesheet" href="css/merch.css" />
-  <link rel="icon" type="image/png" href="assets/images/Vertical Image.png" />
+  <link rel="icon" type="image/png" href="Assets/images/Vertical Image.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Navigation -->
   <header class="navbar">
-    <a href="index.html"><img src="assets/images/back_trans_black.png" alt="Neurovinc Logo" height="60" /></a>
+    <a href="index.html"><img src="Assets/images/back_trans_black.png" alt="Neurovinc Logo" height="60" /></a>
     <nav>
       <ul class="menu">
         <li><a href="about.html">About Us</a></li>
@@ -31,18 +31,18 @@
     <a href="merch-spotlight.html" class="shop-btn"><span>Shop Now</span></a>
     <div class="hero-images">
         <div class="image-swap">
-            <img class="front" src="assets/images/Front.png" alt="Shirt front" />
-            <img class="back" src="assets/images/Back.png" alt="Shirt back" />
+            <img class="front" src="Assets/images/Front.png" alt="Shirt front" />
+            <img class="back" src="Assets/images/Back.png" alt="Shirt back" />
         </div>
 
         <div class="image-swap center">
-            <img class="front" src="assets/images/tote_front.png" alt="Center shirt" />
-            <img class="back" src="assets/images/tote_back.png" alt="Center back" />
+            <img class="front" src="Assets/images/tote_front.png" alt="Center shirt" />
+            <img class="back" src="Assets/images/tote_back.png" alt="Center back" />
         </div>
 
         <div class="image-swap reverse-tilt">
-            <img class="front" src="assets/images/logo_sticker.png" alt="Shirt front" />
-            <img class="back" src="assets/images/neura_sticker.png" alt="Shirt back" />
+            <img class="front" src="Assets/images/logo_sticker.png" alt="Shirt front" />
+            <img class="back" src="Assets/images/neura_sticker.png" alt="Shirt back" />
         </div>
     </div>
   </section>
