--- a/merch-spotlight.html
+++ b/merch-spotlight.html
@@ -43,7 +43,7 @@
                 <img src="Assets/images/neura_sticker.png" class="front" />
                 <img src="Assets/images/logo_sticker.png" class="back" />
             </div>
-            <p class="product-name">Empower Hoodie</p>
+            <p class="product-name">Cut-Out Stickers</p>
         </div>
         <div class="product-card">
             <div class="image-wrapper">
