--- a/about.html
+++ b/about.html
@@ -48,14 +48,14 @@
     <section class="founders">
       <div class="founder-card">
         <img src="Assets/images/aaron_portrait.png" alt="Aaron - Co-Founder" />
-        <h3>Aaron</h3>
+        <h3>Aaron Lan</h3>
         <p>Co-Founder</p>
         <p><i>Lead Programmer</i></p>
         <!-- Optional: Add a short personal quote or role summary -->
       </div>
       <div class="founder-card">
         <img src="Assets/images/rohan_portrait.png" alt="Rohan - Co-Founder" />
-        <h3>Rohan</h3>
+        <h3>Rohan Kholi</h3>
         <p>Co-Founder</p>
         <p><i>Head of Research</i></p>
       </div>
